# data-access-kit-src

./: LICENSE  README.md  composer.json  docker-compose.yaml  phpstan.neon  phpunit.xml
.docker/: replication-init.sql
.github/workflows/: split-and-push.yaml  test.yaml
data-access-kit/: README.md  composer.json
data-access-kit-replication/: .gitignore  CLAUDE.md  Cargo.toml  README.md  SPEC.md  composer.json  php-darwin.ini  php-linux.ini  php.ini  phpunit.xml
data-access-kit-replication/src/: checkpointer.rs  events.rs  filter.rs  lib.php  lib.rs  mysql.rs  stream.rs
data-access-kit-replication/src/stream/: mysql.rs
data-access-kit-replication/test/: AbstractIntegrationTestCase.php  DeleteEventTest.php  EventInterfaceTest.php  InsertEventTest.php  StreamCheckpointerIntegrationTest.php  StreamCheckpointerInterfaceTest.php  StreamFilterIntegrationTest.php  StreamFilterInterfaceTest.php  StreamIntegrationTest.php  StreamInterfaceTest.php  StreamTest.php  UpdateEventTest.php  bootstrap.php
data-access-kit/src/: DefaultNameConverter.php  DefaultValueConverter.php  NameConverterInterface.php  Persistence.php  PersistenceInterface.php  Registry.php  ValueConverterInterface.php
data-access-kit/src/Attribute/: Column.php  Table.php
data-access-kit/src/Converter/: DefaultNameConverter.php  DefaultValueConverter.php  NameConverterInterface.php  ValueConverterInterface.php
data-access-kit/src/Exception/: ConverterException.php  PersistenceException.php
data-access-kit/src/Repository/: Compiler.php  Result.php  (+5 more)
data-access-kit/test/: PersistenceTest.php
(+231 files in other folders)
