[package]
name = "data_access_kit_replication"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ext-php-rs = "0.14.2"
mysql_async = "0.33"
mysql-binlog-connector-rust = { git = "https://github.com/jakubkulhan/mysql-binlog-connector-rust", branch = "table-metadata" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
url = "2.5"
rand = "0.8"
base64 = "0.22"

[profile.release]
strip = "debuginfo"
