[package]
name = "data_access_kit_replication"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ext-php-rs = "0.14.2"
mysql_async = { version = "0.33", default-features = false, features = ["minimal"] }
mysql-binlog-connector-rust = { git = "https://github.com/apecloud/mysql-binlog-connector-rust" }
tokio = { version = "1.0", default-features = false, features = ["rt", "net", "io-util"] }
url = "2.5"
rand = "0.8"
base64 = "0.22"

[profile.release]
strip = "debuginfo"
